# Awake_Challenge

./: .gitmodules  README.md
f1tenth/install/: local_setup.sh  setup.sh
f1tenth/install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.sh
f1tenth/install/f1tenth_gym_ros/share/f1tenth_gym_ros/config/: sim.yaml
f1tenth/log/: latest_build
map_generator/: random_trackgen.py
map_generator/centerline/: map0.csv  map1.csv  map2.csv  map3.csv  map4.csv  map5.csv  map6.csv  map7.csv  map8.csv  map9.csv
map_generator/maps/: map0.pgm  map0.yaml  map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml  map8.pgm  map8.yaml  map9.pgm  map9.yaml
robot_sim_test/: CMakeLists.txt  package.xml
robot_sim_test/config/: config.yaml  joystick.yaml  nav2_config.yaml  robot_config.rviz  robot_top.rviz
robot_sim_test/launch/: gazebo_sim.launch.py  joystick.launch.py  rsp.launch.py  simulation_test.py  test.py
robot_sim_test/maps/: code.py  map12.dae  map12.pgm  map12.yaml  map3.dae  map3.pgm  map3.yaml
robot_sim_test/world/: simplified_circuit_world.world
robot_sim_test/xacro/: common_gazebo.xacro  lidar.xacro  robot.urdf.xacro  robot.urdf.xml  robot_simplified.urdf.xml  skid_steering_drive_gazebo.xacro
